tests/parser/validinput/ctu.idp
vocabulary V{
	type x
	p(x)
	f(x):x
}
structure S:V{
	x = {1..10}
	p<ct> = {1}
	p<u> = {2}
	f<ct> = {1->1}
	f<u> = {2->2;3->3;4->4;5->5;6->6;7->7;8->8;9->9;10->10;}
}
procedure main(){
	return 1	
}
