tests/parser/invalidinput/incons_struct_regression_5.idp
vocabulary V{
	type x
	a(x):x
}

theory T:V{
}

structure S:V{
	x = {1..2}
	a = {1->1; 1->2;2->1}
}

procedure main(){
	return 1;
}
